--- a/css/main.css
+++ b/css/main.css
@@ -11,24 +11,33 @@ html {
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
   font-family: "Roboto Slab", serif;
-  margin: 0;
   line-height: 1.3;
+  color: #fff;
+  background: none;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
 }
 
+body {
+  max-height: 426.88px;
+  margin: 0;
+}
 .caption {
   max-width: 15em;
-  color: #fff;
   background-color: #000;
-  opacity: 0.5;
-  filter: alpha(opacity=50);
+  background-color: rgba(0, 0, 0, .5);
   border-radius: 10px;
   position: absolute;
-  bottom: 0;
-  left: 0;
+  padding: .5rem;
+  bottom: .5rem;
+  left: .5rem;
+  display: inline;
+}
+
+.caption p {
+  margin: .5rem;
 }
 
 .img-flex {
@@ -38,4 +47,21 @@ html {
 
 .unit {
   position: relative;
+  display: inline;
+}
+
+@media only screen and (min-width: 25em) {
+
+  body {
+    max-height: 533.6px;
+  }
+
+}
+
+@media only screen and (min-width: 38em) {
+
+  body {
+    max-height: 400px;
+  }
+
 }
