--- a/css/main.css
+++ b/css/main.css
@@ -5,12 +5,12 @@
 @viewport { width: device-width; scale: 1; }
 
 html {
+  font-family: "Roboto Slab", serif;
   box-sizing: border-box;
   -moz-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
-  font-family: "Roboto Slab", serif;
   line-height: 1.3;
   color: #fff;
   background: none;
@@ -24,7 +24,8 @@ body {
   max-height: 426.88px;
   margin: 0;
 }
-.caption {
+
+figcaption {
   max-width: 15em;
   background-color: #000;
   background-color: rgba(0, 0, 0, .5);
@@ -33,11 +34,14 @@ body {
   padding: .5rem;
   bottom: .5rem;
   left: .5rem;
-  display: inline;
 }
 
-.caption p {
+figcaption p {
   margin: .5rem;
+}
+
+figure {
+  margin: 0;
 }
 
 .img-flex {
@@ -45,7 +49,7 @@ body {
   width: 100%;
 }
 
-.unit {
+div {
   position: relative;
   display: inline;
 }
